--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ dhat = { version = "0.3.3", optional = true }
 itertools = "0.13.0"
 pico-args = "0.5.0"
 regex = "1.11.1"
+strum = "0.26.3"
+strum_macros = "0.26.4"
 tinyjson = "2.5.1"
 
 # Solution dependencies
